给grpc-gateway http接口增加swagger api访问
